--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -32,13 +32,16 @@ jobs:
 
       # Step 4: Initialize Terraform
       - name: Terraform Init
-        run: terraform init
+        run: terraform init 
+        working-directory: fabric/terraform/dev
 
       # Step 5: Run Terraform Plan
       - name: Terraform Plan
         run: terraform plan -out=tfplan
+        working-directory: fabric/terraform/dev
 
       # Step 6: Apply the Terraform plan (auto-approve)
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
         if: github.event_name == 'push'  # Only apply on push to main
+        working-directory: fabric/terraform/dev
